[package]
name = "reveal"
version = "0.1.0"
authors = ["Claudiu Teodor Filip <claudiucelfilip@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[lib]
crate-type = ["cdylib"]

[dependencies]
smart-contract = "0.1.0"
smart-contract-macros = "0.1.0"
nanoid = "0.1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"